[package]
name = "sabo"
version = "0.1.0"
authors = ["Nicholas Vilela <nvilela01@gmail.com>"]
edition = "2021"
keywords = ["game", "engine", "2D", "graphics"]
repository = "https://github.com/nicholasVilela/sabo"
categories = ["game-engines"]
description = "Simple 2D Game Engine in Rust with Glium."
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"