[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# [[bin]]
# path = "src/main.rs"
# name = "snake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sabo = { git = "https://github.com/nicholasVilela/sabo" }
sabo = { path = "../../" }
# sabo = "*"